--- a/recipes/armv8-dev.conf
+++ b/recipes/armv8-dev.conf
@@ -42,7 +42,7 @@ keyring=debian-archive-keyring
 suite=stretch
 
 [Assets]
-packages=libasound2 alsa-utils alsa-tools sox sqlite3 mpd mpc libupnp6 libmpdclient2 libexpat1 libcurl3 libmicrohttpd12 libexpat1 libboost-program-options1.62.0 libboost-system1.62.0 libconfig-dev libjsoncpp1 python-requests
+packages=libasound2 libasound2-dev libasound2-data libasound2-plugin-equal alsa-utils alsa-tools sox sqlite3 mpd mpc libupnp6 libmpdclient2 libexpat1 libcurl3 libmicrohttpd12 libexpat1 libboost-program-options1.62.0 libboost-system1.62.0 libconfig-dev libjsoncpp1 python-requests
 source=http://ftp.nl.debian.org/debian
 keyring=debian-archive-keyring
 suite=stretch
