--- a/volumio/etc/mpd.conf
+++ b/volumio/etc/mpd.conf
@@ -81,3 +81,11 @@ filesystem_charset		"UTF-8"
 id3v1_encoding			"UTF-8"
 ###############################################################################
 
+decoder {
+  plugin "sacdiso"
+  dstdec_threads "4"
+  edited_master "true"
+  lsbitfirst "false"
+  playable_area "stereo"
+}
+
