--- a/volumio/lib/systemd/system/mpd.service
+++ b/volumio/lib/systemd/system/mpd.service
@@ -6,7 +6,7 @@ After=network.target sound.target
 [Service]
 Type=notify
 EnvironmentFile=-/etc/default/mpd
-# ExecStartPre=-/bin/bash -c '/usr/bin/mpd -V | grep -q sacdiso && { grep -q sacdiso /etc/mpd.conf || cat /etc/mpd.conf.d/sacdiso.conf >> /etc/mpd.conf ; }'
+ExecStartPre=-/bin/bash -c '/usr/bin/mpd -V | grep -q sacdiso && { grep -q sacdiso /etc/mpd.conf || cat /etc/mpd.conf.d/sacdiso.conf >> /etc/mpd.conf ; }'
 #ExecStart=/usr/bin/mpd --verbose --stderr --no-daemon $MPDCONF
 ExecStart=/usr/bin/mpd --no-daemon $MPDCONF
 # allow MPD to use real-time priority 50
